--- a/examples/sync-kafka/Cargo.toml
+++ b/examples/sync-kafka/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 anyhow = "1"
 futures = "0.3"
-janus = { path = "../../" }
+janus = "0.1"
 janus-kafka = { path = "../../kafka" }
 structopt = "0.3"
+tokio = { version = "0.2", default-features = false, features = ["rt-threaded"] }
