--- a/kafka/Cargo.toml
+++ b/kafka/Cargo.toml
@@ -10,10 +10,9 @@ futures-channel = { version = "0.3", features = ["sink"] }
 futures-core = "0.3"
 futures-sink = "0.3"
 futures-util = "0.3"
+janus = "0.1"
 owning_ref = "0.4"
-# rdkafka = "0.23"
-rdkafka = { git = "https://github.com/fede1024/rust-rdkafka", branch = "rdkafka-1.4.0" }
-janus = { path = "../" }
+rdkafka = { git = "https://github.com/fede1024/rust-rdkafka" } # Awaiting version bump
 
 [dev-dependencies]
 futures-util = { version = "0.3", features = ["sink"] }
