--- a/examples/tokio-kafka/Cargo.toml
+++ b/examples/tokio-kafka/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 anyhow = "1"
 futures = "0.3"
-janus = "0.1"
+janus = { version = "0.1", path = "../../" }
 janus-kafka = { path = "../../kafka" }
 structopt = "0.3"
 tokio = { version = "0.2", features = ["full"] }
