--- a/kafka/Cargo.toml
+++ b/kafka/Cargo.toml
@@ -10,9 +10,15 @@ futures-channel = { version = "0.3", features = ["sink"] }
 futures-core = "0.3"
 futures-sink = "0.3"
 futures-util = "0.3"
-janus = "0.1"
+janus = { version = "0.1", path = "../" }
 owning_ref = "0.4"
-rdkafka = { git = "https://github.com/fede1024/rust-rdkafka" } # Awaiting version bump
+rdkafka = { version = "0.24", default-features = false, features = ["libz"] }
+smol = { version = "0.1", optional = true }
+
+[features]
+default = ["tokio-rt"]
+tokio-rt = ["rdkafka/tokio"]
+smol-rt = ["smol"]
 
 [dev-dependencies]
 futures-util = { version = "0.3", features = ["sink"] }
