--- a/examples/async-std-kafka/Cargo.toml
+++ b/examples/async-std-kafka/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2018"
 anyhow = "1"
 async-std = { version = "1", features = ["attributes", "unstable"]}
 futures = "0.3"
-janus = { version = "0.1", path = "../.." }
-janus-kafka = { path = "../../kafka", default-features = false, features = ["smol-rt"] }
+janus = { version = "0.2", path = "../../" }
+janus-kafka = { version = "0.1", path = "../../kafka", default-features = false, features = ["smol-rt"] }
 structopt = "0.3"
