--- a/examples/sync-kafka/Cargo.toml
+++ b/examples/sync-kafka/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 anyhow = "1"
 futures = "0.3"
-janus = { version = "0.1", path = "../.." }
-janus-kafka = { path = "../../kafka" }
+janus = { version = "0.2", path = "../../" }
+janus-kafka = { version = "0.1", path = "../../kafka" }
 structopt = "0.3"
 tokio = { version = "0.2", default-features = false, features = ["rt-threaded"] }
