--- a/kafka/Cargo.toml
+++ b/kafka/Cargo.toml
@@ -19,11 +19,13 @@ futures-util = "0.3"
 janus = { version = "0.2", path = "../" }
 owning_ref = "0.4"
 rdkafka = { version = "0.24", default-features = false, features = ["libz"] }
+serde = { version = "1", optional = true }
 smol = { version = "0.1", optional = true }
 
 [features]
 default = ["tokio-rt"]
 tokio-rt = ["rdkafka/tokio"]
+serde1 = ["serde"]
 smol-rt = ["smol"]
 
 [dev-dependencies]
