--- a/examples/sync-kafka/Cargo.toml
+++ b/examples/sync-kafka/Cargo.toml
@@ -8,6 +8,5 @@ edition = "2018"
 anyhow = "1"
 futures = "0.3"
 janus = { version = "0.2", path = "../../" }
-janus-kafka = { version = "0.1", path = "../../kafka" }
+janus-kafka = { version = "0.2", path = "../../kafka", default-features = false }
 structopt = "0.3"
-tokio = { version = "0.2", default-features = false, features = ["rt-threaded"] }
